# desafio-moveit

./: README.md
borg_arm_controller/: CMakeLists.txt  package.xml
borg_arm_controller/config/: dxl_joints.yaml  dxl_joints_12V.yaml
borg_arm_controller/launch/: borg_arm_controller.launch  dxl_controllers.launch  dxl_moveit_bridge.launch  moveit.launch  real_arm_1.launch  real_arm_2.launch  real_arm_3.launch  simulation_arm_startup.launch  simulation_borg_arm_controller.launch
borg_arm_controller/src/: borg_arm_controller.cpp  borg_arm_controller_simulation.cpp
borg_arm_controller/stl/: Collision_box.stl  Collision_box2.stl
borg_arm_description/: CMakeLists.txt  package.xml
borg_arm_description/config/: config.rviz  config_camera.rviz  joint_names.yaml  joints.yaml  joints2.yaml  teste.rviz
borg_arm_description/launch/: control.launch  spawn.launch
borg_arm_description/meshes/: Camera.stl  CameraHolder.stl  Lente.stl  LenteComNucleo.stl  LenteForGazeboSimulation.stl  LenteSemNucleo.stl  Link0.stl  Link1.stl  Link2_H42P.stl  Link3.stl  Link4.stl  M1.stl  M2.stl  M3.stl  M4.stl  M5.stl  lm8hc_1.stl  lm8hc_2.stl  lm8hc_3.stl  lm8hc_4.stl
borg_arm_description/urdf/: borg_manipulator.gazebo.xacro  borg_manipulator.transmission.xacro  borg_manipulator.urdf.xacro  borg_manipulator_robot.urdf.xacro  workbench_with_arm.xacro
borg_arm_gazebo/: CMakeLists.txt  package.xml
borg_arm_gazebo/launch/: gazebo.launch  rviz_box.launch  spawn_box_1.launch  spawn_box_2.launch  spawn_box_3.launch  spawn_box_tf.launch
borg_arm_gazebo/meshes/: aruco_id0_5x5cm.dae  aruco_id4_5x5cm.dae  button.dae  button_old.dae  modifiedBox.dae  modifiedBox_.dae  workbenchCollisionBlock_lowResolution.stl  workbenchCollisionPlane_lowResolution.stl  workbenchVisual_lowResolution.stl
borg_arm_gazebo/model/borg_arm_workbench/: model.config  model.sdf
borg_arm_gazebo/urdf/: arm_workspace.urdf.xacro  box_real.urdf.xacro  workbench.urdf.xacro
borg_arm_gazebo/world/: workbench.world
